# ankle-controller-gd32

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  gd32f425.cfg  upload_firmware.sh
cmake/: gcc_stm32.cmake
src/: main.cpp
src/BSP/: CMakeLists.txt  gd32f425.ld  gd32f4xx_it.c  gd32f4xx_it.h  systick.h
src/BSP/CMSIS/GD/GD32F4xx/Source/: system_gd32f4xx.c
src/FreeRTOS/: CMakeLists.txt
src/FreeRTOS/include/: FreeRTOSConfig.h
src/Simulink/: CMakeLists.txt  backsupport_gyems_v4_f446.cpp  backsupport_gyems_v4_f446.h  backsupport_gyems_v4_f446_capi.cpp  backsupport_gyems_v4_f446_capi.h  backsupport_gyems_v4_f446_capi_host.h  backsupport_gyems_v4_f446_data.cpp  buildInfo.mat  builtin_typeid_types.h  const_params.cpp  defines.txt  rtwtypes.h  zero_crossing_types.h
